adding some finishing touches

--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -5,6 +5,7 @@
         <title>The Adam's Experience: Interests Page</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
+        <link rel="icon"  type="x-icon" href="../images/SiteTabLogo.png">
     </head>
     <body>
         <header>
@@ -40,6 +41,26 @@
                 <li>
                     <a href="https://www.photopea.com" target="_blank">
                         photopea
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.github.com" target="_blank">
+                        github
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.dummyimage.com" target="_blank">
+                        dummy image
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.lipsum.com" target="_blank">
+                        lorem ipsum website
+                    </a>
+                </li>
+                <li>
+                    <a href="https://picsum.photos/images" target="_blank">
+                        Picsum stock images
                     </a>
                 </li>
                 <li>
