--- a/Interests/interests.html
+++ b/Interests/interests.html
@@ -5,6 +5,7 @@
         <title>The Adam's Experience: Interests Page</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
+        <link rel="icon"  type="x-icon" href="../images/SiteTabLogo.png">
     </head>
     <body>
         <header>
@@ -63,6 +64,9 @@
                     <li>upbeat</li>
                     <li>orchestral</li>
                     <li>remixes</li>
+                    <li>cinematic</li>
+                    <li>dnb</li>
+                    <li>indie</li>
                 </ul>
             </article>
             <article>
@@ -76,6 +80,13 @@
                     <li>rhythem</li>
                     <li>typographic hierarchy</li>
                     <li>well-thought out color schemes</li>
+                    <li>dynamic designs</li>
+                    <li>interactive designs</li>
+                    <li>recognizability</li>
+                    <li>understandability</li>
+                    <li>ethical designs</li>
+                    <li>"straight to the point"</li>
+                    <li>designs that can be in different sizes</li>
                 </ul>
             </article>
             <article>
@@ -88,6 +99,14 @@
                     <li>adobe indesign</li>
                     <li>photopea</li>
                     <li>google chrome</li>
+                    <li>google fonts</li>
+                    <li>github</li>
+                    <li>steam</li>
+                    <li>codepen</li>
+                    <li>w3schools</li>
+                    <li>miro</li>
+                    <li>various google drive apps</li>
+                    <li>canvas</li>
                 </ol>
             </article>
             <article>
@@ -98,6 +117,8 @@
                     <li>w3schools</li>
                     <li>creative cloud and its apps</li>
                     <li>adobe scan (on phone)</li>
+                    <li>visual studio code</li>
+                    <li>github desktop</li>
                 </ul>
             </article>
             <article>
@@ -106,6 +127,7 @@
                     <li>adapt to newer tech</li>
                     <li>use a form of organization to design better</li>
                     <li>use references to have a sense of shape</li>
+                    <li>use the scale of items for a sense of priority and/or scale</li>
                 </ul>
             </article>
             <article>
@@ -117,6 +139,8 @@
                     <li>relaxing</li>
                     <li>fighting</li>
                     <li>party</li>
+                    <li>first-person</li>
+                    <li>third-person</li>
                 </ul>
             </article>
             <article>
@@ -137,12 +161,17 @@
                     <dt>Times New Roman</dt>
                     <dd>
                         Basic formal font for many
-                        body text
+                        body text. with some basic 
+                        slab-serif font anatomy and 
+                        and the mix of thin and thick 
+                        strokes in the letters.
                     </dd>
                     <dt>Arial</dt>
                     <dd>
                         a basic font, without any 
-                        glyphs or brackets
+                        glyphs or brackets. with 
+                        basic and consistent strokes 
+                        in the glyphs.
                     </dd>
                     <dt>Baskerville URW</dt>
                     <dd>
@@ -151,12 +180,113 @@
                         perfect tone formality 
                         and glyph.
                     </dd>
+                    <dt>Micro 5</dt>
+                    <dd>
+                        if you want to have a retro
+                        look and tone to your web 
+                        design, you can use micro 5
+                        to add this retro feel to it.
+                    </dd>
                 </dl>
+            </article>
+            <article>
+                <h2>best html/css for making a webpage</h2>
+                <ol>
+                    <li><code>display: ;</code></li>
+                    <li><code>flex-direction: ;</code></li>
+                    <li><code>flex-wrap: ;</code></li>
+                    <li><code>justify-content: ;</code></li>
+                    <li><code>align-items: ;</code></li>
+                    <li><code>align-content: ;</code></li>
+                    <li><code>gap / row-gap / column-gap</code></li>
+                    <li><code>font-family: ;</code></li>
+                    <li><code>font-size: ;</code></li>
+                    <li><code>font-weight: ;</code></li>
+                    <li><code>text-transform: ;</code></li>
+                    <li><code>text-decoration: ;</code></li>
+                    <li><code>text-shadow: ;</code></li>
+                    <li><code>text-align: ;</code></li>
+                    <li><code>color: ;</code></li>
+                    <li><code>margin: ; & padding: ;</code></li>
+                    <li><code>a href="url" target="_blank"</code></li>
+                    <li><code>ul, ol, dl </code></li>
+                    <li><code>id [#] & class [.]</code></li>
+                    <li><code>elementName:hover {}</code></li>
+                    <li><code>transition-duration: ;</code></li>
+                    <li><code>background-color: ;</code></li>
+                    <li><code>border: ;</code></li>
+                    <li><code>h1 - h6</code></li>
+                    <li><code>width & height</code></li>
+                </ol>
+            </article>
+            <article>
+                <h2>Ways to relax and focus</h2>
+                <ul>
+                    <li>
+                        take a short break from your project
+                    </li>
+                    <li>
+                        listen to some videos, or listen to 
+                        some appropriate music to give yourself
+                        energy.
+                    </li>
+                    <li>
+                        look at your project in many perspectives,
+                        see what makes sense, see what needs to 
+                        be changed, added, or omitted
+                    </li>
+                    <li>
+                        organize your work to help with understanding 
+                        the project better
+                    </li>
+                    <li>
+                        while relaxing, also think about what makes 
+                        sense to work on in the project.
+                    </li>
+                    <li>
+                        if overwhelmed or on a burnout, best to rest 
+                        well and make sure to get your mind off of the 
+                        project.
+                    </li>
+                </ul>
+            </article>
+            <article>
+                <h2>Design Advice</h2>
+                <ul>
+                    <li>
+                        Use grid for organization
+                    </li>
+                    <li>
+                        focus on what is the most important 
+                        detail on the design
+                    </li>
+                    <li>
+                        have a frame of reference when 
+                        designing something. 
+                    </li>
+                    <li>
+                        in typography, focus on typeface style, 
+                        tone, and glyph for the appropriate
+                        tone.
+                    </li>
+                    <li>
+                        in graphic designs, play around with 
+                        figure and ground. utilize the visual 
+                        aspects of the design.
+                    </li>
+                    <li>
+                        focus on the size and "loudness" of the 
+                        visual aspects of design. from size and 
+                        color, to shape and tone, it depends 
+                        on which part of the design is supposed 
+                        to take focus on.
+                    </li>
+                </ul>
             </article>
         </section>
 
         <footer>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
                 <h4>&copy; L.O.L. Productions</h4>
             </a>
         </footer>
