--- a/Works/works.html
+++ b/Works/works.html
@@ -5,6 +5,7 @@
         <title>The Adam's Experience: Works Page</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
+        <link rel="icon"  type="x-icon" href="../images/SiteTabLogo.png">
     </head>
     <body>
         <header>
