--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>The Adams Experience</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
+        <link rel="icon"  type="x-icon" href="images/SiteTabLogo.png">
     </head>
     <body>
         <header>
@@ -21,7 +22,7 @@
 
         <section id="view">
             <article>
-                <img src="images/Ravine.jpg" alt="A ravine">
+                <img src="images/RavineLo.jpg" alt="A ravine">
                 <h4>Oct. 3, 2019</h4>
                 <p>
                     A pic of a ravine taken while 
@@ -29,7 +30,7 @@
                 </p>
             </article>
             <article>
-                <img src="images/Shine.jpg" alt="A sun shining over a cliff">
+                <img src="images/ShineLo.jpg" alt="A sun shining over a cliff">
                 <h4>May 25, 2020</h4>
                 <p>
                     A pic of a cliffside, where the 
